js/src/jit-test/tests/basic/letLegacyForOfOrInScope.js
@@ -1,5 +1,0 @@
-var x = "foobar";
-{ for (let x of x) assertEq(x.length, 1, "second x refers to outer x"); }
-
-var x = "foobar";
-{ for (let x in x) assertEq(x.length, 1, "second x refers to outer x"); }
